# i3toolwait

./: Cargo.toml  Makefile  README.md  i3toolwait  requirements.txt
src/: config.rs  i3ipc.rs  lisp.rs  main.rs
