[package]
name = "i3toolwait"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
byteorder = "1.5.0"
futures = "0.3.28"
rust_lisp = "0.18.0"
serde = { version = "1.0.188", features = ["std", "derive", "serde_derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
